# meme-games

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  settings.ini
.github/: deploy.sh
.github/workflows/: build.yaml  ci.yaml  deploy.yaml  gen-requirements.yaml  generate-reqs.yaml
media/shizuku/: shizuku.model.json
meme_games/: _modidx.py  di.py  init.py  lobby.py  main.py  metrics.py  middleware.py  not_found.py  user.py  utils.py
meme_games/apps/: __init__.py
meme_games/apps/alias/: __init__.py  domain.py  routes.py
meme_games/apps/alias/components/: __init__.py  game.py  game_cards.py  settings.py  team.py  word_panel.py
meme_games/apps/alias/domain/: __init__.py  config.py  game.py  team.py
meme_games/apps/codenames/: __init__.py  components.py  domain.py  routes.py
meme_games/apps/home/: routes.py
meme_games/apps/shared/: __init__.py  components.py  general.py  navigation.py  not_found.py  settings.py  spectators.py  timer.py  utils.py  ws_route.py
meme_games/apps/user/: __init__.py  routes.py
meme_games/apps/user/components/: general.py
meme_games/apps/video/: __init__.py  components.py  routes.py
meme_games/apps/video/components/: __init__.py  controls.py  media.py  streamer.py
meme_games/apps/whoami/: __init__.py  components.py  domain.py  monitor.py  routes.py
meme_games/apps/whoami/components/: __init__.py  basic.py  cards.py  game.py  notes.py
meme_games/apps/word_packs/: __init__.py  components.py  domain.py  routes.py
meme_games/codenames/: __init__.py  components.py  domain.py
meme_games/common/: __init__.py  components.py  database.py  imports.py  lobby.py  notify.py  user.py  utils.py
meme_games/core/: __init__.py  database.py  di.py  imports.py  logger.py  middleware.py  rate_limit.py  utils.py
meme_games/core/middleware/: __init__.py  bot_filter.py  lobby_rate_limit.py  rate_limit.py  session.py
meme_games/domain/: __init__.py  lobby.py  notify.py  timer.py  user.py
meme_games/domain/lobby/: __init__.py  lobby.py  member.py  service.py
meme_games/domain/user/: user.py
meme_games/video/: __init__.py  components.py
meme_games/whoami/: __init__.py  components.py  domain.py  monitor.py
meme_games/word_packs/: __init__.py  components.py  domain.py
notebooks/: 01_alias.ipynb  lobby.ipynb  main.ipynb  user.ipynb  whoami.ipynb  wordpack.ipynb
static/: movement._hs  script._hs  styles.css  styles.css.map  styles.scss  timer._hs
static/scripts/: canvas._hs  movement._hs  whoami.js  youtube._hs  youtube.js
static/scripts/common/: not_found.js  timer.js  utils.js
static/scripts/utils/: theme.js
static/scripts/video/: webrtc.js
static/scripts/whoami/: draggable.js  label_drag.js  movement.js  ws.js
static/styles/: globals.css  live2d.css  live2d.css.map  live2d.scss  styles.css  styles.css.map  styles.scss
tests/: client.py  test_rate_limit.py
tests/alias_tests/: join_team.py  main.py
